# 1.01.01 (66291) Jul 26, 2012
7/26/12 Deploying to dev for testing of recent changes.
Modified width of the text box used for entering mass value guesses.
Changed the tilt-prediction challenge to allow two attempts instead of one (for greater consistency with other challenges).
# 1.01.00 (64020) May 8, 2012
5/8/12 >Deployment to production server of version that includes the "tip prediction" challenge in the game.
# 1.00.09 (63992) May 7, 2012
5/7/12 Deploying to dev for testing with latest common code.
# 1.00.08 (61262) Feb 13, 2012
2/13/12 Deploying to dev for review by team that will be using this sim in an upcoming study.
Added sim sharing messages for the number of points scored during the game.
Turned on dialog for entering ID when study version is run.
Added better user component IDs for mystery masses.
# 1.00.07 (60612) Jan 25, 2012
1/25/12 Deploying study version to dev for review by researchers.
Added sim sharing for all tabs, including game.
Added initial round of sim-sharing instrumentation: Check boxes and movement of sprites.
Fixed an issue where floating point inaccuracies could cause a tip-prediction challenge that was balanced to be incorrectly evaluated.
Made the "easy" level of the tilt prediction balance challenges have a fixed proportion of balanced versus unbalanced challenges.
Made the tilt-selection panel used in some game challenges highlight correct answers using a different color.
# 1.00.06 (59185) Dec 8, 2011
12/8/11 Deployment to dev server of a version with only the game tab, requested for some testing.
# 1.00.05 (59183) Dec 8, 2011
12/8/11 Fixed some issues with positioning masses in the tilt-prediction challenges.
# 1.00.04 (59179) Dec 8, 2011
12/8/11 Deployment to dev server of a version with only the game tab.
# 1.00.03 (59177) Dec 8, 2011
12/8/11 Publication of a version with only the Balance Lab tab to dev server.
# 1.00.02 (59174) Dec 8, 2011
12/8/11 Made the new tip-prediction challenge work at all levels of the game.