@@ -1,7 +1,8 @@
+> Fixed an issue with the clock on the game tab that was causing it to be slow by 1 second per minute.
 # 1.01.01 (66291) Jul 26, 2012
 7/26/12 Deploying to dev for testing of recent changes.
-Modified width of the text box used for entering mass value guesses.
-Changed the tilt-prediction challenge to allow two attempts instead of one (for greater consistency with other challenges).
+> Modified width of the text box used for entering mass value guesses.
+> Changed the tilt-prediction challenge to allow two attempts instead of one (for greater consistency with other challenges).
 # 1.01.00 (64020) May 8, 2012
 5/8/12 >Deployment to production server of version that includes the "tip prediction" challenge in the game.
 # 1.00.09 (63992) May 7, 2012
